chore(dev): development updates

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,7 +5,7 @@ manifest {
     homePage = 'https://github.com/esteinig/cerebro'
     description = 'Metagenomic diagnostics of low-abundance pathogens'
     mainScript = 'main.nf'
-    version = '0.8.0'
+    version = '0.10.0'
     nextflowVersion = '>=24.04'
 }
 
@@ -39,7 +39,7 @@ params {
 
     error_strategy = "ignore"
     
-    mode {
+    test {
         qc {
             enabled = false
         }
@@ -51,11 +51,9 @@ params {
         }
     }
 
-
     // =====================================================
     // Databases and references for taxonomic classification
     // =====================================================
-
 
     production {
         enabled = false
@@ -75,9 +73,7 @@ params {
         }
     }
 
-    // Post-process pipeline outputs - this is 
-    // active in production mode by default for
-    // uploads and summary files
+    // Post-process pipeline outputs - this is active in production mode by default
 
     process {
         enabled = true
@@ -85,7 +81,7 @@ params {
         ercc_mass = null
     }
 
-    // Global ONT specific settings
+    // Global Oxford Nanopore Technologies specific settings
 
     ont {
         enabled = false
@@ -94,48 +90,53 @@ params {
         } 
     }
 
+    validation {
+        enabled      = false
+        sample_sheet = null
+        qc {
+            enabled  = true
+        }
+    }
+
     // =====================================================
     // Databases and references for taxonomic classification
     // =====================================================
 
+    // Note that the quality control references and databases
+    // are handled in the quality control parameter section
+
     database {
 
         taxonomy {
-            directory = "db/ncbi_tax"
+            directory = "db/taxonomy"
         }
 
         alignment {
-            viruses {
-                index       = "db/virosaurus98_full_sr.mmi"
-                fasta       = "db/virosaurus98_full_sr.fasta"
-                blacklist   = null
-
-                background {
-                    fasta   = "db/SILVA_LSURef_NR99.fasta,db/SILVA_SSURef_NR99.fasta"
-                    kraken2 = "db/langmead_pluspf_64GB,db/rrna"
-                }
-            }
-            bacteria {
-                index = null
-                fasta = "db/refseq_bacteria_2022.fasta"
-                mash  = "db/refseq_bacteria_2022.msh"
-            }
-            eukaryots {
-                index = null
-                fasta = "db/refseq_pf_2022.fasta"
-                mash  = "db/refseq_pf_2022.msh"
-            }
+            index = null
+            fasta = ""
+            mash  = "" 
         }
 
         kmer {
-            kraken2 = "db/langmead_eupath48,db/langmead_pluspf_64GB"
+            kraken2 = "db/kraken2/langmead_pluspf_64GB"
+            metabuli = "db/metabuli/gtdb"
         }
 
         assembly {
-            blast   = "db/NT_20230219"
-            diamond = "db/NR_20230312/nr_diamond.dmnd"
+            blast   = "db/blast/NT_20230219"
+            diamond = "db/diamond/NR_20230312/nr_diamond.dmnd"
         }
 
+        panviral {
+            index       = "db/panviral/virosaurus98_full_sr.mmi"
+            fasta       = "db/panviral/virosaurus98_full_sr.fasta"
+            blacklist   = null
+
+            background {
+                fasta   = "db/background/SILVA_LSURef_NR99.fasta,db/SILVA_SSURef_NR99.fasta"
+                kraken2 = "db/background/langmead_pluspf_64GB,db/rrna"
+            }
+        }
     }
 
     // =============================================
@@ -150,13 +151,10 @@ params {
         replicates = 1
     }
 
-    validation {
-        enabled      = false
-        sample_sheet = null
-        qc {
-            enabled  = true
-        }
-    }
+
+    // ==========================
+    // Quality control processing
+    // ==========================
 
     qc {
         enabled = true
@@ -203,9 +201,9 @@ params {
 
         host {
             depletion {
-                enabled     = true
-                databases   = ""
-                references  = ""
+                enabled     = false
+                kraken2     = null
+                reference   = null
                 taxa        = "Metazoa"
                 direct      = "9606"
                 min_cov     = 0
@@ -216,9 +214,9 @@ params {
 
         background {
             depletion {
-                enabled     = true
-                databases   = ""
-                references  = ""
+                enabled     = false
+                kraken2     = null
+                reference   = null
                 taxa        = "Metazoa"
                 direct      = "9606"
                 min_cov     = 0
@@ -228,6 +226,12 @@ params {
         }
 
     }
+
+
+    // =================================================
+    // Taxonomic profiling and classification strategies
+    // =================================================
+
 
     taxa {
         enabled = false
@@ -289,51 +293,45 @@ params {
                 taxonomic_level = "S"
                 minimum_reads = 3
             }
+            metabuli {
+                enabled = false
+                precision {
+                    enabled = false
+                    min_score = 0.008
+                    min_sp_score = null
+                }
+            }
         }
 
         assembly {
             enabled = false
-
-            meta {
-                enabled = true
-                spades {
-                    k = "21,29,39,59,79,99"
-                }
-                blastn {
-                    enabled = true
-                    min_evalue = 0.000001
-                    min_identity  = 80
-                    max_target_seqs = 100
-                }
-                diamond {
-                    enabled = true
-                    args = "--mid-sensitive"
-                    min_evalue = 0.000001
-                    min_identity  = 60
-                    max_target_seqs = 50
-                    // Block size in billions of sequence letters to be processed at a time. 
-                    // This is the main parameter for controlling the program’s memory and disk space usage. 
-                    // Bigger numbers will increase the use of memory and temporary disk space, but also improve performance. 
-                    // The program can be expected to use roughly six times this number of memory (in GB). The default value 
-                    // is 2.0. The parameter can be decreased for reducing memory use, as well as increased for better  
-                    // performance (values of > 20 are not recommended).
-                    block_size = 12
-                    // The number of chunks for processing the seed index. 
-                    // This option can be additionally used to tune the performance. 
-                    // The default value is 4, while setting this parameter to 1 instead
-                    // will improve the performance at the cost of increased memory use.
-                    index_chunks = 1
-                }
+             spades {
+                k = "21,29,39,59,79,99"
             }
-            consensus {
-                enabled = false
-
-                ivar {
-                    mpileup_args = "-d 50000"
-                    min_qual     = 20
-                    min_depth    = 20
-                    min_freq     = 0.75
-                }
+            blastn {
+                enabled = true
+                min_evalue = 0.000001
+                min_identity  = 80
+                max_target_seqs = 100
+            }
+            diamond {
+                enabled = true
+                args = "--mid-sensitive"
+                min_evalue = 0.000001
+                min_identity  = 60
+                max_target_seqs = 50
+                // Block size in billions of sequence letters to be processed at a time. 
+                // This is the main parameter for controlling the program’s memory and disk space usage. 
+                // Bigger numbers will increase the use of memory and temporary disk space, but also improve performance. 
+                // The program can be expected to use roughly six times this number of memory (in GB). The default value 
+                // is 2.0. The parameter can be decreased for reducing memory use, as well as increased for better  
+                // performance (values of > 20 are not recommended).
+                block_size = 12
+                // The number of chunks for processing the seed index. 
+                // This option can be additionally used to tune the performance. 
+                // The default value is 4, while setting this parameter to 1 instead
+                // will improve the performance at the cost of increased memory use.
+                index_chunks = 1
             }
         }
     }
@@ -357,6 +355,26 @@ params {
         }
     }
     
+    // ================================================================================================
+    // Probe hybridisation capture protocols for pan-viral genome detection and recovery
+    // ================================================================================================
+
+    panviral {
+        enabled = false
+
+        assembly {
+            enabled = true
+            consensus {
+                ivar {
+                    mpileup_args = "-d 50000"
+                    min_qual     = 20
+                    min_depth    = 20
+                    min_freq     = 0.75
+                }
+            }
+        }
+    }
+
     // =====================================================================================
     // Metagenomics from culture for profiling and hybrid-assembly in species identification
     // =====================================================================================
@@ -370,8 +388,10 @@ params {
 
     }
 
-    // Process resource specification as parameters so 
-    // that resources can be set from the command-line
+   
+    // ============================
+    // Process resource definitions 
+    // ============================
 
     resources {
         ivar {
@@ -395,11 +415,16 @@ params {
         rasusa {
             cpus = 2
         }
-        kraken2 {
-            cpus = 4
-        }
         minimap2 {
             cpus = 8
+        }
+        metabuli {
+            cpus = 8
+            memory = "64 GB"
+        }
+        kraken2 {
+            cpus = 8
+            memory = "64 GB"
         }
         blast_nt {
             cpus = 8
@@ -412,13 +437,6 @@ params {
         meta_spades {
             cpus = 8
             memory = "64 GB"
-        }
-        kraken2uniq {
-            cpus = 8
-            memory = "64 GB"
-        }
-        kraken2bracken {
-            cpus = 8
         }
         umi_align {
             cpus = 8
@@ -448,12 +466,6 @@ params {
 
 }
 
-// ================================
-// Validation experiment parameters
-// ================================
-
-includeConfig "$baseDir/lib/configs/validation.config"
-
 
 // ==================
 // Execution Profiles
@@ -467,10 +479,11 @@ profiles {
     // ====================
 
     test_dev {
-        params.mode.dev.enabled = true    // test utility functions, inputs and all modules deactivated
+        params.test.dev.enabled             = true    // test utility functions, inputs and all modules deactivated
     }
     test_io {    
-        params.mode.io.enabled  = true    // test input functions, all modules deactivated
+        params.qc.host.depletion.enabled    = true
+        params.test.io.enabled              = true    // test input functions, all modules deactivated
     }
     test_qc {    
 
@@ -478,7 +491,7 @@ profiles {
         // Default quality control components without assay controls or 
         // deduplication; can be enabled on command-line.
 
-        params.mode.qc.enabled  = true    
+        params.test.qc.enabled  = true    
 
         params.qc.enabled                   = true
         params.qc.deduplication.enabled     = false
@@ -526,69 +539,22 @@ profiles {
         params.resources.minimap2_aneuploidy.cpus   = 196
 
     }
-    
-    // =================
-    // Database Profiles
-    // =================
-
-    databases {
-        params.qc.controls.ercc.fasta                 = "db/ERCC92.fasta"
-        params.qc.controls.phage.fasta                = "db/phage.fasta"
-        params.qc.host.depletion.references           = "db/chm13v2_sr.mmi"
-        params.qc.host.depletion.databases            = "db/langmead_pluspf_64GB"
-
-        params.qc.controls.phage.identifiers.dna_extraction = "T4-Monash"      
-        params.qc.controls.phage.identifiers.rna_extraction = "M2-Monash"    
-        params.qc.controls.phage.identifiers.sequencing     = "PhiX"
-
-        params.virus_background_references = "db/SILVA_LSURef_NR99.fasta,db/SILVA_SSURef_NR99.fasta"
-        params.virus_background_dbs = "db/langmead_pluspf_64GB,db/rrna"
-        params.virus_db_index = "db/virosaurus98_full_sr.mmi"
-        params.virus_db_fasta = "db/virosaurus98_full_sr.fasta"
-        params.virus_blacklist = null
         
-        params.bacteria_fasta = "db/refseq_bacteria_2022.fasta"
-        params.bacteria_mash_index = "db/refseq_bacteria_2022.msh"
-        params.eukaryots_mash_index = "db/refseq_pf_2022.msh"
-        params.eukaryots_fasta = "db/refseq_pf_2022.fasta"
-        params.meta_blast_nt = "db/NT_20230219"
-        params.meta_diamond_nr = "db/NR_20230312/nr_diamond.dmnd"
-        params.kraken2_dbs = "db/langmead_eupath48,db/langmead_pluspf_64GB"
-    }
-
-
-    
     // =================
     // Pipeline Profiles
     // =================
 
-    dev {
-        
-        params.qc.reads.enabled                      = true        
-        params.qc.reads.nanoq.enabled                = true    
-        params.qc.controls.ercc.enabled              = false
-        params.qc.controls.phage.enabled             = false
-        params.qc.host.depletion.enabled             = true
-        params.taxa.enabled                          = true
-
-    }
     db {
-        params.qc.host.depletion.databases           = "db/kraken2/langmead_pluspf_64GB"
-        params.virus_background_references           = "db/background/SILVA_LSURef_NR99.fasta,db/background/SILVA_SSURef_NR99.fasta"
-        params.virus_background_dbs                  = "db/kraken2/langmead_pluspf_16GB,db/background/rrna"
-        params.virus_db_fasta                        = "db/virosaurus98_full.fasta"
+        params.qc.host.depletion.kraken2             = "db/kraken2/hprc"
     }
     db_sr {
-        params.qc.host.depletion.references          = "db/chm13v2_sr.mmi"
-        params.virus_db_index                        = "db/virosaurus98_full_sr.mmi"
+        params.qc.host.depletion.reference           = "db/alignment/chm13v2_sr.mmi"
     }
-
     db_ont {
-        params.qc.host.depletion.references          = "db/chm13v2_ont.mmi"
-        params.virus_db_index                        = "db/virosaurus98_full_ont.mmi"
+        params.qc.host.depletion.reference           = "db/alignment/chm13v2_ont.mmi"
     }
 
-    twist_sr {
+    panviral_sr {
         params.taxa.assembly.consensus.enabled       = true
         params.virus_db_index                        = "db/virosaurus98_full_sr.mmi"
         params.virus_background_dbs                  = "db/kraken2/langmead_pluspf_64GB,db/background/rrna"
@@ -704,7 +670,6 @@ profiles {
         params.resources.blast_nt.cpus = 8
         params.resources.diamond_nr.cpus = 8
         params.resources.meta_spades.cpus = 16
-        params.resources.kraken2uniq.cpus = 8
         params.resources.umi_align.cpus = 4
         params.resources.umi_calib.cpus = 4
         params.resources.rasusa.cpus = 2
@@ -716,7 +681,8 @@ profiles {
 
         params.resources.blast_nt.memory    = "42 GB"
         params.resources.diamond_nr.memory  = "42 GB"
-        params.resources.kraken2uniq.memory = "42 GB"
+        params.resources.kraken2.memory     = "42 GB"
+        params.resources.metabuli.memory    = "42 GB"
         params.resources.meta_spades.memory = "42 GB"
 
         params.taxa.assembly.meta.diamond.block_size = 8
@@ -741,7 +707,6 @@ profiles {
         params.resources.blast_nt.cpus = 16
         params.resources.diamond_nr.cpus = 16
         params.resources.meta_spades.cpus = 32
-        params.resources.kraken2uniq.cpus = 16
         params.resources.umi_align.cpus = 32
         params.resources.umi_calib.cpus = 8
         params.resources.rasusa.cpus = 2
@@ -753,7 +718,8 @@ profiles {
 
         params.resources.blast_nt.memory    = "96 GB"
         params.resources.diamond_nr.memory  = "64 GB"
-        params.resources.kraken2uniq.memory = "96 GB"
+        params.resources.kraken2.memory     = "96 GB"
+        params.resources.metabuli.memory    = "96 GB"
         params.resources.meta_spades.memory = "64 GB"
 
         params.taxa.assembly.meta.diamond.block_size = 8
@@ -798,7 +764,6 @@ process {
     withLabel: fastp { cpus = params.resources.fastp.cpus }
     withLabel: nanoq { cpus = params.resources.nanoq.cpus }
     withLabel: spades { cpus = params.resources.spades.cpus }
-    withLabel: kraken2 { cpus = params.resources.kraken2.cpus }
     withLabel: cerebro { cpus = params.resources.cerebro.cpus }
     withLabel: rasusa { cpus = params.resources.rasusa.cpus }
     withLabel: minimap2 { cpus = params.resources.minimap2.cpus }
@@ -810,9 +775,10 @@ process {
     withLabel: minimap2_realign { cpus = params.resources.minimap2_realign.cpus }
     withLabel: cnvkit_aneuploidy { cpus = params.resources.cnvkit_aneuploidy.cpus }
     withLabel: minimap2_aneuploidy { cpus = params.resources.minimap2_aneuploidy.cpus }
+    withLabel: kraken2 { cpus = params.resources.kraken2.cpus; memory = params.resources.kraken2.memory }
+    withLabel: metabuli { cpus = params.resources.metabuli.cpus; memory = params.resources.metabuli.memory }
     withLabel: blast_nt { cpus = params.resources.blast_nt.cpus; memory = params.resources.blast_nt.memory }
     withLabel: diamond_nr { cpus = params.resources.diamond_nr.cpus; memory = params.resources.diamond_nr.memory }
-    withLabel: kraken2uniq { cpus = params.resources.kraken2uniq.cpus; memory = params.resources.kraken2uniq.memory }
     withLabel: meta_spades { cpus = params.resources.meta_spades.cpus; memory = params.resources.meta_spades.memory }
 
 }
