chore(dev): updates; deactivate workflow params

--- a/nextflow.config
+++ b/nextflow.config
@@ -131,11 +131,6 @@ params {
             index       = "db/panviral/virosaurus98_full_sr.mmi"
             fasta       = "db/panviral/virosaurus98_full_sr.fasta"
             blacklist   = null
-
-            background {
-                fasta   = "db/background/SILVA_LSURef_NR99.fasta,db/SILVA_SSURef_NR99.fasta"
-                kraken2 = "db/background/langmead_pluspf_64GB,db/rrna"
-            }
         }
     }
 
@@ -204,8 +199,8 @@ params {
                 enabled     = false
                 kraken2     = null
                 reference   = null
-                taxa        = "Metazoa"
-                direct      = "9606"
+                taxa        = "7711"  // Chordata (P)
+                direct      = "9606"  // Homo sapiens (S)
                 min_cov     = 0
                 min_len     = 0
                 min_mapq    = 0
@@ -217,7 +212,7 @@ params {
                 enabled     = false
                 kraken2     = null
                 reference   = null
-                taxa        = "Metazoa"
+                taxa        = "7711"
                 direct      = "9606"
                 min_cov     = 0
                 min_len     = 0
@@ -305,7 +300,7 @@ params {
 
         assembly {
             enabled = false
-             spades {
+            spades {
                 k = "21,29,39,59,79,99"
             }
             blastn {
@@ -365,6 +360,7 @@ params {
         assembly {
             enabled = true
             consensus {
+                
                 ivar {
                     mpileup_args = "-d 50000"
                     min_qual     = 20
@@ -384,6 +380,8 @@ params {
 
         assembly {
             enabled = true
+            nanoq_args = "-l 100 -q 7"
+            dragonflye_args = "--gsize 2800000"
         }
 
     }
@@ -555,9 +553,12 @@ profiles {
     }
 
     panviral_sr {
-        params.taxa.assembly.consensus.enabled       = true
-        params.virus_db_index                        = "db/virosaurus98_full_sr.mmi"
+        params.panviral.assembly.consensus.enabled       = true
+        params.databases.panviral.index              = "db/virosaurus98_full_sr.mmi"
+        params.databases.panviral.fasta              = "db/virosaurus98_full_sr.mmi"
+
         params.virus_background_dbs                  = "db/kraken2/langmead_pluspf_64GB,db/background/rrna"
+
         params.qc.host.depletion.databases           = "db/kraken2/langmead_pluspf_64GB"
         params.qc.host.depletion.references          = "db/chm13v2_sr.mmi"
     }
