--- a/templates/stack/stack.toml
+++ b/templates/stack/stack.toml
@@ -47,3 +47,19 @@ email                           = "example@cerebro.io"
 domain                          = "example.org"
 username                        = "example"
 password                        = "example"
+
+[fs]
+enabled                         = true
+replication                     = "100"
+
+[fs.primary]
+enabled                         = true
+center                          = "dgx"
+rack                            = "dev"
+path                            = "/data/data/cerebro/data"
+
+[fs.secondary]
+enabled                         = true
+center                          = "gfs"
+rack                            = "dev"
+path                            = "/data/data/cerebro/backup"
