--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "@carbon/charts-svelte": "^1.12.0",
     "@floating-ui/dom": "1.5.1",
-    "@skeletonlabs/skeleton": "^2.2.0",
+    "@skeletonlabs/skeleton": "2.10",
     "@skeletonlabs/tw-plugin": "^0.2.1",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-node": "^1.3.1",
