--- a/cerebro/stack/client/Cargo.toml
+++ b/cerebro/stack/client/Cargo.toml
@@ -52,3 +52,4 @@ clap = { version = "4.3.23", features = ["derive", "env", "unstable-styles", "wr
 anstyle = "1.0.1"
 rpassword = "7.2.0"
 actix-web-httpauth = "0.8.0"
+dialoguer = "0.11.0"
