--- a/nextflow.config
+++ b/nextflow.config
@@ -1,26 +1,25 @@
-plugins {
-  id 'nf-boost'
-}
-
-boost {
-  cleanup = true
-  cleanupInterval = "30s"
-}
-
 params {
 
-  
+  executionDirectory = "."
+  databaseDirectory  = "db"
+
+  stageDirectory = "$params.executionDirectory/stage"
+  outputDirectory = "$params.executionDirectory/output"
 
   panviralEnrichment {
 
     hostAligner           = "bowtie2"
-    hostIndex             = "db/chm13v2"
+    hostIndex             = "$params.databaseDirectory/chm13v2"
 
     virusAligner          = "minimap2"
-    virusIndex            = "db/virus.fasta"
-    virusReference        = "db/virus.fasta"
+    virusIndex            = "$params.databaseDirectory/virus.fasta"
+    virusReference        = "$params.databaseDirectory/virus.fasta"
 
-    adapterReverse        = null
+    controlAligner        = "minimap2"
+    controlIndex          = "$params.databaseDirectory/phage.fasta"
+    controlReference      = "$params.databaseDirectory/phage.fasta"
+
+    adapterForward        = null
     adapterReverse        = null
 
     remapThreads          = 2
@@ -39,8 +38,7 @@ params {
 
 process {
 
-    errorStrategy = "ignore"
-
+    withLabel: vircov_scrubby { cpus = params.threads.vircov }
     withLabel: vircov { cpus = params.threads.vircov }
     withLabel: scrubby { cpus = params.threads.scrubby } 
     withLabel: fastp { cpus = params.threads.fastp }
