--- a/cerebro/stack/client/Cargo.toml
+++ b/cerebro/stack/client/Cargo.toml
@@ -28,7 +28,7 @@ name = "cerebro_client"
 # Workflow library dependency to access module structs and definitions
 # to use in endpoints e.g. to generate quality control summary tables  
 # for the user from models in the database
-cerebro-workflow = { path = "../workflow" }
+cerebro-pipeline = { path = "../pipeline" }
 
 # Model library dependency to access shared module structs and definitions
 # to use in endpoints and client responses
