--- a/cerebro/stack/server/Cargo.toml
+++ b/cerebro/stack/server/Cargo.toml
@@ -25,7 +25,7 @@ path = "src/cli.rs"
 # Workflow library dependency to access module structs and definitions
 # to use in endpoints e.g. to generate quality control summary tables  
 # for the user from models in the database
-cerebro-workflow = { path = "../workflow" }
+cerebro-pipeline = { path = "../pipeline" }
 
 
 # Report library dependency to access module structs and definitions
