--- a/cerebro/stack/pipeline/Cargo.toml
+++ b/cerebro/stack/pipeline/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "cerebro-model"
+name = "cerebro-pipeline"
 version = "0.8.0"
 authors = ["esteinig <eike.steinig@unimelb.edu.au>"]
-description = "Cerebro: shared data models for separation of client and server"
+description = "Cerebro: pipeline module for internal utility tools and output handling"
 documentation = "https://github.com/esteinig/cerebro"
 homepage = "https://github.com/esteinig/cerebro"
 repository = "https://github.com/esteinig/cerebro"
@@ -17,33 +17,37 @@ include = [
     "Cargo.toml"
 ]
 
+[[bin]]
+name = "cerebro-pipeline"
+path = "src/cli.rs"
 
 [lib]
-name = "cerebro_model"
+name = "cerebro_pipeline"
 
 [dependencies]
 
-# Workflow library dependency to access module structs and definitions
-# to use in endpoints e.g. to generate quality control summary tables  
-# for the user from models in the database
-cerebro-pipeline = { path = "../../stack/pipeline" }
 
 anyhow = "1.0"
 thiserror = "1.0"
-itertools = "0.10.3"
-env_logger = "0.9.0"
-niffler = "2.3"
+taxonomy = "0.10.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+itertools = "0.10.3"
+env_logger = "0.9.0"
 log = "0.4"
-chrono = { version = "0.4", features = ["serde"] }
 csv = "1.2"
+wax = "0.5.0"
+tabled = { version = "0.9.0", features = ["color"] }
+colored = "2.0"
+needletail = "0.5.1"
+globwalk = "0.9.1"
+ansi_term = "0.12.1"
+chrono = "0.4.37"
+statistical = "1.0.0"
+niffler = "2.3"
+rayon = "1.10.0"
+memchr = "2.7.2"
 uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
-reqwest = { version = "0.11.16", features = ["blocking", "json"] }
-toml = "0.7.6"
 clap = { version = "4.3.23", features = ["derive", "env", "unstable-styles", "wrap_help"] }
-anstyle = "1.0.1"
-rpassword = "7.2.0"
-actix-web-httpauth = "0.8.0"
+anstyle = "1.0.6"
 fancy-regex = "0.11.0"
-actix-web = "4"
